2003-02-19  Mikael Djurfeldt  <djurfeldt@nada.kth.se>

	* environments.c (DEFAULT_OBARRAY_SIZE): Changed from 137 to 31
	(since hash tables now adapt their size).

	* modules.c (scm_modules_prehistory): Changed from 2001 to 1533
	(current number of prehistory bindings; hashtable code will select
	a prime which is greater than this value).

	* symbols.c (scm_symbols_prehistory): Changed from 1009 to 2139
	(current number of initial symbols).

	* properties.c (scm_init_properties): Don't specify size of
	scm_properties_whash.

	* objprop.c (scm_init_objprop): Don't specify size of
	scm_object_whash.

	* keywords.c (scm_init_keywords): Don't specify a hash table size.

	* hooks.c (scm_c_hook_add): Fixed bug in append mode.

	The following changes introduce the use of resizable hash tables
	throughout Guile.  It also renames the old *-hash-table* functions
	to *-alist-vector* and places them, together with the rest of the
	weak vector support, in the module (ice-9 weak-vector).  We should
	probably introduce a new, better, API for weak references, for
	example "weak pairs" a la MIT-Scheme.  (In Chez scheme, they even
	look like and are used like ordinary pairs.)

	* environments.c (obarray_enter, obarray_retrieve, obarray_remove,
	leaf_environment_fold, obarray_remove_all): Use hashtable
	accessors.

	* gc.c (scm_init_storage): Moved hook initialization to
	scm_storage_prehistory.
	(scm_storage_prehistory): New function.
	(scm_igc): Added commentary about placement of
	scm_after_sweep_c_hook.

	* gc-mark.c (scm_mark_all): Use hashtable accessors.
	(scm_gc_mark_dependencies): Use SCM_WVECT_WEAK_KEY_P and
	SCM_WVECT_WEAK_VALUE_P.

	* hashtab.c, hashtab.h (scm_hash_for_each, scm_hash_map): New
	functions.
	(scm_vector_to_hash_table, scm_c_make_resizing_hash_table):
	Removed.
	(scm_make_weak_key_hash_table, scm_make_weak_value_hash_table,
	scm_make_doubly_weak_hash_table): Moved here from weaks.c.

	* init.c (scm_init_guile_1): Removed call to scm_init_weaks; Added